--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
         <title>Test page</title>
     </head>
     <body>
-        <h1>Heading one</h1>
+        <h1>Heading one <br>with line break</br></h1>
         <p>This is a <a href="http://google.com">cool item</a>.</p>
         <img src="cat.jpg">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqVSUZgoHo_oDRxZBldBPMrWFmBYQrdpqwig&s">
