--- a/ruleset2-styles.html
+++ b/ruleset2-styles.html
@@ -2,8 +2,10 @@
 <head>
     <title>Ruleset 2 styles </title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style-red.css">
 </head> 
 <body>
     <h1>A second page for my website</h1>
+    <h2>Who would have thunk?</h2>
 </body>
 </html>
